# dataserver

./: .gitignore  Cargo.toml  Cross.toml  README.md  debugToRemoteHost.sh  optimisedToRemoteHost.sh  releaseToRemoteHost.sh  websocket.html
.github/workflows/: rust.yml
admin_menu/: Cargo.toml
admin_menu/src/: main.rs
admin_menu/src/menu/: data.rs  mod.rs  user.rs
admin_menu/src/remote/: mod.rs
crosscompilation/: Dockerfile
examples/: custom_state.rs  debug_middleware.rs  example_config.rs  main.rs  simple.rs
server/: Cargo.toml  README.md
server/crosscompilation/: setup.sh
server/src/: debug_middleware.rs  error.rs  lib.rs  main.rs
server/src/admin_interface/: data.rs  mod.rs
server/src/bot/: mod.rs
server/src/bot/commands/: alarms.rs  alias.rs  help.rs  keyboard.rs  plot.rs  plotables.rs  show.rs
server/src/data_store/: mod.rs
server/src/data_store/data_router/: mod.rs
server/src/data_store/error_router/: mod.rs
server/src/database/: alarm.rs  mod.rs  passw.rs  user.rs
server/src/httpserver/: data_router_ws_client.rs  handlers.rs  login_redirect.rs  mod.rs  utility.rs
server/src/httpserver/dynamic_pages/: mod.rs
server/src/httpserver/static_webpages/: index.html
server/src/menu/: data.rs  mod.rs  user.rs
server/src/rpc/: mod.rs
server/templates/: list_data.hbs
server/web/: graph.html  plot.js
src/: certificate_manager.rs  config.rs  databases.rs  debug_middleware.rs  error.rs  helper.rs  httpserver.rs  lib.rs  main.rs  menu.rs  test.rs  websocket.rs
src/bot/: botplot.rs  mod.rs
src/bot/commands/: alarms.rs  alias.rs  help.rs  keyboard.rs  mod.rs  plot.rs  plotables.rs  show.rs
src/data_store/: compression.rs  data_router.rs  mod.rs  read_to_array.rs  read_to_packets.rs  specifications.rs
src/data_store/data_router/: alarms.rs  mod.rs
src/data_store/error_router/: mod.rs  sensor_errors.rs
src/httpserver/: data_router.rs  data_router_ws_client.rs  error_router.rs  error_router_ws_client.rs  handlers.rs  login_redirect.rs  mod.rs  secure_database.rs  sensor_errors.rs  timeseries_access.rs  utility.rs  websocket_client_handler.rs  websocket_data_router.rs  websocket_dataserver.rs
src/httpserver/dynamic_pages/: mod.rs
src/httpserver/error_router/: sensor_errors.rs
src/httpserver/static_webpages/: index.html  plot_A.html  plot_A_debug.html  plot_B.html
src/httpserver/timeseries_access/: mod.rs
src/httpserver/timeseries_interface/: compression.rs  mod.rs  read.rs  read_to_array.rs  specifications.rs
src/menu/: data.rs  mod.rs  user.rs
src/telegram_bot/: botplot.rs  mod.rs
templates/: plot.hbs  settings.hbs
web/: errors.html  graph.html  index.html  plot.js  test.html  test_graph_updates.html  websocket_getData.html
