[package]
name = "dataserver"
version = "0.3.0"
authors = ["David Kleingeld <dskleingeld@gmail.com>"]
edition = "2018"
publish = false

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

panic = 'unwind'
debug = true
debug-assertions = true
overflow-checks = true

[features]
stable = []

[dependencies]
structopt = "0.3"
dialoguer = "0.6"
console = "0.12"

actix = "0.9"
actix-rt = "1.0"
#async-std = "1.4.0"
futures = "0.3.1"
actix-web = { version = "2", features = ["rustls"] }
actix-web-actors = "2"
actix-net = "0.2.6"
actix-identity = "0.2.0"
actix-files = "0.2.1"
actix-service = "1.0.1"
#yarte = { version ="0.12.2" }

old_sled = { version = "0.30", package = "sled" }
sled = "0.34"

rustls = "0.16.0"
ring = "0.16.9"

bytes = "0.5"
walkdir = "2.2.5"
num = "0.3.0"
threadpool = "1.7.1"

cert_tools = { git = "https://github.com/dskleingeld/cert_manager" }

webpki = "0.21"
webpki-roots = "0.20"

chrono = { version = "0.4.6", features = ["serde"] }
rand = "0.7"

log = "0.4.5"
fern = { version = "0.6", features = ["colored"] }
error_level = { version = "0.1", git = "https://github.com/dskleingeld/error_level" }

bincode = "1.0.1"
text_io = "0.1.7"

serde_derive = "1.0.80"
serde = "1.0.80"
serde_yaml = "0.8.7"
serde_json = "1.0.33"

reqwest = {version = "0.10.0", features = ["blocking"]}
byteorder = "1.2.6"

byteseries = { version = "0.4", git = "https://github.com/dskleingeld/minimal_timeseries" }
bitspec = { git = "https://github.com/dskleingeld/bitspec"}
thiserror = "1"

smallvec = {version = "1.4", features = ["write"]}
crossbeam-utils = "0.7"
itertools = "0.9"

num-traits = "0.2"
num-derive = "0.3"

telegram-bot = "0.7"

plotters = { version = "0.2" }
image = { version = "0.23" }
evalexpr = "5.0.5"
regex = "1.3"

#[patch.crates-io] 
# override syntect package used by bat used by yarte to not use
# onig-sys which can not be cross compiled
# syntect = { version = "4.2", default-features = false, features = ["default-fancy"], git = "https://github.com/trishume/syntect"}
#"servo-fontconfig-sys:4.0.6#servo-fontconfig-sys:4.0.9" = { git = "https://github.com/dskleingeld/libfontconfig" }

#[profile.dev.package.foo]
