[package]
name = "dataserver"
version = "0.3.0"
authors = ["David Kleingeld <dskleingeld@gmail.com>"]
edition = "2018"
publish = false

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

panic = 'unwind'
debug = true
debug-assertions = true
overflow-checks = true

[features]
stable = []

[dependencies]
structopt = "0.3"
dialoguer = "0.6"
console = "0.12"

actix = "0.10"
actix-rt = "1.0"
futures = "0.3.1"
actix-web = { version = "3", features = ["rustls"] }
actix-web-actors = "3"
actix-net = "0.2.6"
actix-identity = "0.3"
actix-files = "0.3"
actix-service = "1.0.1"
actix-threadpool = "0.3.3"
yarte = { version ="0.12" , git = "https://github.com/dskleingeld/yarte" }

old_sled = { version = "0.30", package = "sled" }
sled = "0.34"

rustls = "0.18.0"
ring = "0.16.9"

bytes = "0.5"
walkdir = "2.2.5"
num-traits = "0.2"
num-derive = "0.3"
threadpool = "1.7.1"

webpki = "0.21"
webpki-roots = "0.20"

chrono = { version = "0.4", features = ["serde"] }
rand = "0.7"

log = "0.4.5"
fern = { version = "0.6", features = ["colored"] }
error_level = { version = "0.1", git = "https://github.com/dskleingeld/error_level" }

bincode = "1.0.1"
text_io = "0.1.7"

serde_derive = "1.0.80"
serde = "1.0.80"
serde_yaml = "0.8.7"
serde_json = "1.0.33"

reqwest = {version = "0.10.0", default-features = false, features = ["blocking","rustls-tls"]}
byteorder = "1.2.6"

byteseries = { version = "0.4", git = "https://github.com/dskleingeld/minimal_timeseries" }
bitspec = { git = "https://github.com/dskleingeld/bitspec", branch = "bool-fields"}
thiserror = "1"

smallvec = {version = "1.4", features = ["write"]}
crossbeam-utils = "0.7"
itertools = "0.9"

telegram-bot = {version = "0.7", default-features = false, features = ["rustls"]}

plotters = { version = "0.3" }
image = { version = "0.23" }
evalexpr = "5.0.5"
regex = "1.3"
