[package]
name = "admin_menu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../interface" }
structopt = "0.3"
dialoguer = "0.8"
tokio = { version = "1.0", features = ["macros", "rt"] }
